plugins/krl-interpreter/krl_interpreter/parser/grammar/generated/KrlParser.py
# Generated from KrlParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KrlParser ( Parser ):

    grammarFileName = "KrlParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'{'", "'}'", 
                     "'('", "')'", "'['", "']'", "','", "':'", "';'", "'='", 
                     "'=='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "DEF", "DEFFCT", "DEFDAT", "END", "ENDFCT", 
                      "ENDDAT", "GLOBAL", "PUBLIC", "DECL", "INT", "REAL", 
                      "BOOL", "CHAR", "FRAME", "POS", "E6POS", "E6AXIS", 
                      "AXIS", "PTP", "PTP_REL", "LIN", "LIN_REL", "CIRC", 
                      "CIRC_REL", "WAIT", "SEC", "FOR", "TO", "STEP", "ENDFOR", 
                      "WHILE", "ENDWHILE", "LOOP", "ENDLOOP", "EXIT", "IF", 
                      "THEN", "ELSE", "ENDIF", "TRUE", "FALSE", "IN", "OUT", 
                      "BCO", "SPS", "INTERRUPT", "ON", "ANIN", "ANOUT", 
                      "CONTINUE", "HALT", "BASE", "TOOL", "DOLLAR_NAME", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "COMMA", "COLON", "SEMI", "EQ", "EQEQ", 
                      "NEQ", "LT", "LE", "GT", "GE", "PLUS", "MINUS", "STAR", 
                      "SLASH", "AND", "OR", "NOT", "REAL_LIT", "INT_LIT", 
                      "STRING_LIT", "NAME", "FILE_ATTR", "NEWLINE", "WS", 
                      "COMMENT_TEXT" ]

    RULE_program = 0
    RULE_srcModule = 1
    RULE_datModule = 2
    RULE_paramList = 3
    RULE_paramDecl = 4
    RULE_datDeclBlock = 5
    RULE_statementBlock = 6
    RULE_statement = 7
    RULE_motionStmt = 8
    RULE_motionOpts = 9
    RULE_poseExpr = 10
    RULE_waitStmt = 11
    RULE_ifStmt = 12
    RULE_forStmt = 13
    RULE_whileStmt = 14
    RULE_loopStmt = 15
    RULE_exitStmt = 16
    RULE_frameSwitchStmt = 17
    RULE_varDecl = 18
    RULE_typeName = 19
    RULE_assignStmt = 20
    RULE_unsupportedStmt = 21
    RULE_frameLiteral = 22
    RULE_frameField = 23
    RULE_expr = 24
    RULE_orExpr = 25
    RULE_andExpr = 26
    RULE_notExpr = 27
    RULE_cmpExpr = 28
    RULE_addExpr = 29
    RULE_mulExpr = 30
    RULE_unaryExpr = 31
    RULE_atom = 32

    ruleNames =  [ "program", "srcModule", "datModule", "paramList", "paramDecl", 
                   "datDeclBlock", "statementBlock", "statement", "motionStmt", 
                   "motionOpts", "poseExpr", "waitStmt", "ifStmt", "forStmt", 
                   "whileStmt", "loopStmt", "exitStmt", "frameSwitchStmt", 
                   "varDecl", "typeName", "assignStmt", "unsupportedStmt", 
                   "frameLiteral", "frameField", "expr", "orExpr", "andExpr", 
                   "notExpr", "cmpExpr", "addExpr", "mulExpr", "unaryExpr", 
                   "atom" ]

    EOF = Token.EOF
    DEF=1
    DEFFCT=2
    DEFDAT=3
    END=4
    ENDFCT=5
    ENDDAT=6
    GLOBAL=7
    PUBLIC=8
    DECL=9
    INT=10
    REAL=11
    BOOL=12
    CHAR=13
    FRAME=14
    POS=15
    E6POS=16
    E6AXIS=17
    AXIS=18
    PTP=19
    PTP_REL=20
    LIN=21
    LIN_REL=22
    CIRC=23
    CIRC_REL=24
    WAIT=25
    SEC=26
    FOR=27
    TO=28
    STEP=29
    ENDFOR=30
    WHILE=31
    ENDWHILE=32
    LOOP=33
    ENDLOOP=34
    EXIT=35
    IF=36
    THEN=37
    ELSE=38
    ENDIF=39
    TRUE=40
    FALSE=41
    IN=42
    OUT=43
    BCO=44
    SPS=45
    INTERRUPT=46
    ON=47
    ANIN=48
    ANOUT=49
    CONTINUE=50
    HALT=51
    BASE=52
    TOOL=53
    DOLLAR_NAME=54
    LBRACE=55
    RBRACE=56
    LPAREN=57
    RPAREN=58
    LBRACK=59
    RBRACK=60
    COMMA=61
    COLON=62
    SEMI=63
    EQ=64
    EQEQ=65
    NEQ=66
    LT=67
    LE=68
    GT=69
    GE=70
    PLUS=71
    MINUS=72
    STAR=73
    SLASH=74
    AND=75
    OR=76
    NOT=77
    REAL_LIT=78
    INT_LIT=79
    STRING_LIT=80
    NAME=81
    FILE_ATTR=82
    NEWLINE=83
    WS=84
    COMMENT_TEXT=85

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KrlParser.EOF, 0)

        def srcModule(self):
            return self.getTypedRuleContext(KrlParser.SrcModuleContext,0)


        def datModule(self):
            return self.getTypedRuleContext(KrlParser.DatModuleContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(KrlParser.StatementBlockContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(KrlParser.NEWLINE)
            else:
                return self.getToken(KrlParser.NEWLINE, i)

        def getRuleIndex(self):
            return KrlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = KrlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==83:
                self.state = 66
                self.match(KrlParser.NEWLINE)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 7]:
                self.state = 72
                self.srcModule()
                pass
            elif token in [3]:
                self.state = 73
                self.datModule()
                pass
            elif token in [-1, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 31, 33, 35, 36, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 81]:
                self.state = 74
                self.statementBlock()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 77
            self.match(KrlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SrcModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(KrlParser.NAME, 0)

        def LPAREN(self):
            return self.getToken(KrlParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(KrlParser.RPAREN, 0)

        def statementBlock(self):
            return self.getTypedRuleContext(KrlParser.StatementBlockContext,0)


        def DEF(self):
            return self.getToken(KrlParser.DEF, 0)

        def DEFFCT(self):
            return self.getToken(KrlParser.DEFFCT, 0)

        def END(self):
            return self.getToken(KrlParser.END, 0)

        def ENDFCT(self):
            return self.getToken(KrlParser.ENDFCT, 0)

        def GLOBAL(self):
            return self.getToken(KrlParser.GLOBAL, 0)

        def paramList(self):
            return self.getTypedRuleContext(KrlParser.ParamListContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(KrlParser.NEWLINE)
            else:
                return self.getToken(KrlParser.NEWLINE, i)

        def getRuleIndex(self):
            return KrlParser.RULE_srcModule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSrcModule" ):
                listener.enterSrcModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSrcModule" ):
                listener.exitSrcModule(self)




    def srcModule(self):

        localctx = KrlParser.SrcModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_srcModule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 79
                self.match(KrlParser.GLOBAL)


            self.state = 82
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 83
            self.match(KrlParser.NAME)
            self.state = 84
            self.match(KrlParser.LPAREN)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==81:
                self.state = 85
                self.paramList()


            self.state = 88
            self.match(KrlParser.RPAREN)
            self.state = 90 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 89
                self.match(KrlParser.NEWLINE)
                self.state = 92 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==83):
                    break

            self.state = 94
            self.statementBlock()
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==83:
                self.state = 96
                self.match(KrlParser.NEWLINE)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFDAT(self):
            return self.getToken(KrlParser.DEFDAT, 0)

        def NAME(self):
            return self.getToken(KrlParser.NAME, 0)

        def datDeclBlock(self):
            return self.getTypedRuleContext(KrlParser.DatDeclBlockContext,0)


        def ENDDAT(self):
            return self.getToken(KrlParser.ENDDAT, 0)

        def PUBLIC(self):
            return self.getToken(KrlParser.PUBLIC, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(KrlParser.NEWLINE)
            else:
                return self.getToken(KrlParser.NEWLINE, i)

        def getRuleIndex(self):
            return KrlParser.RULE_datModule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatModule" ):
                listener.enterDatModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatModule" ):
                listener.exitDatModule(self)




    def datModule(self):

        localctx = KrlParser.DatModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_datModule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(KrlParser.DEFDAT)
            self.state = 103
            self.match(KrlParser.NAME)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 104
                self.match(KrlParser.PUBLIC)


            self.state = 108 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 107
                self.match(KrlParser.NEWLINE)
                self.state = 110 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==83):
                    break

            self.state = 112
            self.datDeclBlock()
            self.state = 113
            self.match(KrlParser.ENDDAT)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==83:
                self.state = 114
                self.match(KrlParser.NEWLINE)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KrlParser.ParamDeclContext)
            else:
                return self.getTypedRuleContext(KrlParser.ParamDeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KrlParser.COMMA)
            else:
                return self.getToken(KrlParser.COMMA, i)

        def getRuleIndex(self):
            return KrlParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = KrlParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.paramDecl()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==61:
                self.state = 121
                self.match(KrlParser.COMMA)
                self.state = 122
                self.paramDecl()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(KrlParser.NAME, 0)

        def COLON(self):
            return self.getToken(KrlParser.COLON, 0)

        def IN(self):
            return self.getToken(KrlParser.IN, 0)

        def OUT(self):
            return self.getToken(KrlParser.OUT, 0)

        def getRuleIndex(self):
            return KrlParser.RULE_paramDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDecl" ):
                listener.enterParamDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDecl" ):
                listener.exitParamDecl(self)




    def paramDecl(self):

        localctx = KrlParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(KrlParser.NAME)
            self.state = 129
            self.match(KrlParser.COLON)
            self.state = 130
            _la = self._input.LA(1)
            if not(_la==42 or _la==43):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatDeclBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KrlParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(KrlParser.VarDeclContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(KrlParser.NEWLINE)
            else:
                return self.getToken(KrlParser.NEWLINE, i)

        def getRuleIndex(self):
            return KrlParser.RULE_datDeclBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatDeclBlock" ):
                listener.enterDatDeclBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatDeclBlock" ):
                listener.exitDatDeclBlock(self)




    def datDeclBlock(self):

        localctx = KrlParser.DatDeclBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_datDeclBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 523776) != 0) or _la==81:
                self.state = 132
                self.varDecl()
                self.state = 134 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 133
                    self.match(KrlParser.NEWLINE)
                    self.state = 136 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==83):
                        break

                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KrlParser.StatementContext)
            else:
                return self.getTypedRuleContext(KrlParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(KrlParser.NEWLINE)
            else:
                return self.getToken(KrlParser.NEWLINE, i)

        def getRuleIndex(self):
            return KrlParser.RULE_statementBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementBlock" ):
                listener.enterStatementBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementBlock" ):
                listener.exitStatementBlock(self)




    def statementBlock(self):

        localctx = KrlParser.StatementBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statementBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36011318850878976) != 0) or _la==81:
                self.state = 143
                self.statement()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 144
                    self.match(KrlParser.NEWLINE)
                    self.state = 147 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==83):
                        break

                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def motionStmt(self):
            return self.getTypedRuleContext(KrlParser.MotionStmtContext,0)


        def waitStmt(self):
            return self.getTypedRuleContext(KrlParser.WaitStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(KrlParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(KrlParser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(KrlParser.WhileStmtContext,0)


        def loopStmt(self):
            return self.getTypedRuleContext(KrlParser.LoopStmtContext,0)


        def exitStmt(self):
            return self.getTypedRuleContext(KrlParser.ExitStmtContext,0)


        def frameSwitchStmt(self):
            return self.getTypedRuleContext(KrlParser.FrameSwitchStmtContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(KrlParser.VarDeclContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(KrlParser.AssignStmtContext,0)


        def unsupportedStmt(self):
            return self.getTypedRuleContext(KrlParser.UnsupportedStmtContext,0)


        def getRuleIndex(self):
            return KrlParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = KrlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.motionStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.waitStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.whileStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 159
                self.loopStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 160
                self.exitStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 161
                self.frameSwitchStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 162
                self.varDecl()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 163
                self.assignStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 164
                self.unsupportedStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MotionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KrlParser.RULE_motionStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CircMotionContext(MotionStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KrlParser.MotionStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def poseExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KrlParser.PoseExprContext)
            else:
                return self.getTypedRuleContext(KrlParser.PoseExprContext,i)

        def COMMA(self):
            return self.getToken(KrlParser.COMMA, 0)
        def CIRC(self):
            return self.getToken(KrlParser.CIRC, 0)
        def CIRC_REL(self):
            return self.getToken(KrlParser.CIRC_REL, 0)
        def motionOpts(self):
            return self.getTypedRuleContext(KrlParser.MotionOptsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCircMotion" ):
                listener.enterCircMotion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCircMotion" ):
                listener.exitCircMotion(self)


    class PtpLinMotionContext(MotionStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KrlParser.MotionStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def poseExpr(self):
            return self.getTypedRuleContext(KrlParser.PoseExprContext,0)

        def PTP(self):
            return self.getToken(KrlParser.PTP, 0)
        def PTP_REL(self):
            return self.getToken(KrlParser.PTP_REL, 0)
        def LIN(self):
            return self.getToken(KrlParser.LIN, 0)
        def LIN_REL(self):
            return self.getToken(KrlParser.LIN_REL, 0)
        def motionOpts(self):
            return self.getTypedRuleContext(KrlParser.MotionOptsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPtpLinMotion" ):
                listener.enterPtpLinMotion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPtpLinMotion" ):
                listener.exitPtpLinMotion(self)



    def motionStmt(self):

        localctx = KrlParser.MotionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_motionStmt)
        self._la = 0 # Token type
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21, 22]:
                localctx = KrlParser.PtpLinMotionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7864320) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 168
                self.poseExpr()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==81:
                    self.state = 169
                    self.motionOpts()

